# WebAppStore2

./: README.md  category.json  groups.json  product.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_record_counter_views.py
blog/templates/blog/: record_confirm_delete.html  record_detail.html  record_form.html  record_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_category.py  0003_alter_product_image.py  0004_alter_product_options_product_publish_product.py  0005_product_owner.py  0006_alter_product_publish_product.py  0007_alter_product_publish_product.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_remove_user_token_user_username.py  0004_user_token.py
users/templates/users/: login.html  user_form.html
