[tool.poetry]
name = "webappstore2"
version = "0.1.0"
description = ""
authors = ["jylu lyapunova <jylilapa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
